terminado funcoes da pagina de etapas

--- a/pages/adicionarEtapa.html
+++ b/pages/adicionarEtapa.html
@@ -277,7 +277,7 @@
             .then(response => response.json())
             .then(data => {
                 console.log('Etapa cadastrada com sucesso:', data);
-                window.location.href = 'produtos.html'; // Redireciona após cadastro
+                window.location.href = 'etapasProduto.html'; // Redireciona após cadastro
             })
             .catch(error => {
                 console.error('Erro ao cadastrar a etapa:', error);
