--- a/pages/editaEstoque.html
+++ b/pages/editaEstoque.html
@@ -43,14 +43,14 @@
                     <label for="quantidade_material">Quantidade</label>
                     <input type="number" class="form-control" id="quantidade_material" name="quantidade_material">
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="preco_material">Preço</label>
                     <input type="text" class="form-control" id="preco_material" name="preco_material">
                 </div>
                 <div class="form-group">
                     <label for="data_aquisicao">Data de Aquisição</label>
                     <input type="text" class="form-control" id="data_aquisicao" name="data_aquisicao" disabled>
-                </div>
+                </div> -->
                 <div class="d-flex justify-content-center">
                     <button type="submit" class="btn btn-primary mt-2">Salvar Alterações</button>
                 </div>
