--- a/pages/material.html
+++ b/pages/material.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Estoque</title>
+    <title>Material</title>
 </head>
 <body class="bg-body-tertiary">
     <div class="d-flex">
@@ -31,16 +31,17 @@
 
         <!-- Conteúdo Principal -->
         <div class="container my-5">
-            <h1 class="mb-4">Estoque</h1>
+            <h1 class="mb-4">Material</h1>
 
             <div class="d-flex justify-content-between mb-3">
+                <button class="btn btn-primary" onclick="adicionarProduto()">Adicionar Material</button>
             </div>
 
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th>ID Produto</th>
-                        <th>Nome do Produto</th>
+                        <th>ID Material</th>
+                        <th>Nome do Material</th>
                         <th>Quantidade</th>
                         <th>Ações</th>
                     </tr>
