--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -19,7 +19,7 @@
                     <a href="dashboard.html" class="nav-link text-white">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a href="produtos.html" class="nav-link text-white">Produtos</a>
+                    <a href="produtos.html" class="nav-link active text-white">Produtos</a>
                 </li>
                 <li>
                     <a href="estoque.html" class="nav-link text-white">Estoque</a>
