--- a/pages/adicionarMatEstoque.html
+++ b/pages/adicionarMatEstoque.html
@@ -58,7 +58,7 @@
             const quantidadeMaterial = document.getElementById('quantidadeMaterial').value;
 
             try {
-                const response = await fetch('http://127.0.0.1:3333/estoque', {
+                const response = await fetch('http://127.0.0.1:3333/material', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -68,10 +68,10 @@
                         quantidadeMaterial
                     })
                 });
-
+                console.log(response);
                 if (response.ok) {
                     alert('Produto adicionado com sucesso!');
-                    window.location.href = 'estoque.html'; // Redireciona para a lista de produtos
+                    window.location.href = 'material.html'; 
                 } else {
                     alert('Erro ao adicionar produto.');
                 }
