--- a/pages/editaEtapa.html
+++ b/pages/editaEtapa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar Etapa</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-body-tertiary">
     <div class="d-flex">
@@ -33,15 +33,15 @@
                 </div>
                 <div class="form-group">
                     <label for="material_x">Material</label>
-                    <input type="text" class="form-control" id="material_x" name="material_x">
+                    <input type="text" class="form-control" id="material_x" name="material_x" disabled>
                 </div>
                 <div class="form-group">
                     <label for="quantidade_material_x">Quantidade de Material</label>
                     <input type="number" class="form-control" id="quantidade_material_x" name="quantidade_material_x">
                 </div>
                 <div class="form-group">
-                    <label for="tempo_necessario">Tempo Necessário (minutos)</label>
-                    <input type="number" class="form-control" id="tempo_necessario" name="tempo_necessario">
+                    <label for="tempo_necessario">Tempo Necessário</label>
+                    <input type="time" class="form-control" id="tempo_necessario" name="tempo_necessario">
                 </div>
                 <div class="d-flex justify-content-center">
                     <button type="submit" class="btn btn-primary mt-2">Salvar Alterações</button>
@@ -53,24 +53,33 @@
     <script>
         const etapaId = new URLSearchParams(window.location.search).get('id');
 
-        // Função para buscar dados da etapa
+        // Função para buscar dados da etapa e do material
         document.addEventListener('DOMContentLoaded', async () => {
             if (etapaId) {
                 try {
-                    const response = await fetch(`http://127.0.0.1:3333/recuperaEtapa/${etapaId}`);
-                    const data = await response.json();
-                    // console.log(data)
-                    if (data) {
-                        // Preenche o formulário com os dados da etapa
-                        document.getElementById('nome_etapa').value = data.nome_etapa;
-                        document.getElementById('material_x').value = data.material_x;
-                        document.getElementById('quantidade_material_x').value = data.quantidade_material_x;
-                        document.getElementById('tempo_necessario').value = data.tempo_necessario;
+                    const etapaResponse = await fetch(`http://127.0.0.1:3333/recuperaEtapas2/${etapaId}`);
+                    const etapaData = await etapaResponse.json();
+                    // console.log('Dados da etapa:', etapaData);
+                    if (etapaData) {
+                        // Preenche os campos da etapa
+                        document.getElementById('nome_etapa').value = etapaData.nome_etapa;
+                        document.getElementById('quantidade_material_x').value = etapaData.quantidade_gasta;
+                        document.getElementById('tempo_necessario').value = etapaData.tempo_necessario;
+                        console.log('ID do material:', etapaData.fk_material_id_material);
+                        // Busca o nome do material pelo ID usando a rota "/estoque/:id"
+                        const materialResponse = await fetch(`http://127.0.0.1:3333/estoque/${etapaData.fk_material_id_material}`);
+                        const materialData = await materialResponse.json();
+                        // console.log('Dados do material:', materialData);
+                        if (materialData && materialData[0].nome_material) {
+                            document.getElementById('material_x').value = materialData[0].nome_material;
+                        } else {
+                            console.error('Material não encontrado.');
+                        }
                     } else {
                         alert('Etapa não encontrada.');
                     }
                 } catch (error) {
-                    console.error('Erro ao buscar dados da etapa:', error);
+                    console.error('Erro ao buscar dados da etapa ou do material:', error);
                 }
             } else {
                 alert('ID da etapa não encontrado na URL.');
@@ -84,14 +93,14 @@
             const updatedEtapa = {
                 id_etapa: etapaId,
                 nome_etapa: document.getElementById('nome_etapa').value,
-                material_x: document.getElementById('material_x').value,
                 quantidade_material_x: document.getElementById('quantidade_material_x').value,
-                tempo_necessario: document.getElementById('tempo_necessario').value
+                tempo_necessario: document.getElementById('tempo_necessario').value,
+                // quantidade_gasta: etapaData.quantidade_gasta
             };
 
             try {
                 const response = await fetch('http://127.0.0.1:3333/atualizaEtapa', {
-                    method: 'POST',
+                    method: 'PUT',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(updatedEtapa)
                 });
