--- a/pages/editaProduto.html
+++ b/pages/editaProduto.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="form-group">
                     <label for="n_lote">Número do Lote</label>
-                    <input type="text" class="form-control" id="n_lote" name="n_lote">
+                    <input type="text" class="form-control" id="n_lote" name="n_lote" disable>
                 </div>
                 <div class="form-group">
                     <label for="data_criacao">Data de Criação</label>
@@ -135,15 +135,16 @@
 
             try {
                 const response = await fetch('http://127.0.0.1:3333/atualizaProduto', {
-                    method: 'POST',
+                    method: 'PUT',
                     headers: {
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify(updatedProduct)
                 });
                 const data = await response.json();
-                if (data.success) {
+                if (data.ok) {
                     alert('Produto atualizado com sucesso!');
+                    window.location.href = 'produtos.html'; 
                 } else {
                     alert('Erro ao atualizar o produto.');
                 }
