--- a/pages/etapasProduto.html
+++ b/pages/etapasProduto.html
@@ -43,6 +43,8 @@
                         <th>Material</th>
                         <th>Quantidade de Material</th>
                         <th>Tempo Necessário</th>
+                        <th>Acoes</th>
+                        <th>Status</th>
                     </tr>
                 </thead>
                 <tbody id="etapasTableBody">
