--- a/pages/material.html
+++ b/pages/material.html
@@ -83,7 +83,7 @@
                 } else {
                     const row = document.createElement('tr');
                     row.innerHTML = `
-                        <td colspan="4" class="text-center">Nenhum produto encontrado no estoque.</td>
+                        <td colspan="4" class="text-center">Nenhum material encontrado no estoque.</td>
                     `;
                     tableBody.appendChild(row);
                 }
