--- a/pages/adicionarMatEstoque.html
+++ b/pages/adicionarMatEstoque.html
@@ -29,7 +29,7 @@
         </nav>
         
         <div class="container my-5">
-            <h1 class="mb-4">Adicionar Produto ao Estoque</h1>
+            <h1 class="mb-4">Adicionar Material ao Estoque</h1>
 
             <form id="addProductForm">
                 <div class="mb-3">
@@ -45,7 +45,7 @@
                 <!-- Centralizar os botões "Voltar" e "Adicionar Produto" -->
                 <div class="d-flex justify-content-center">
                     <button type="button" class="btn btn-secondary me-2" onclick="voltarPagina()">Voltar</button>
-                    <button type="submit" class="btn btn-primary">Adicionar Produto</button>
+                    <button type="submit" class="btn btn-primary">Adicionar Material</button>
                 </div>
             </form>
         </div>
