--- a/pages/editaEtapa.html
+++ b/pages/editaEtapa.html
@@ -107,6 +107,7 @@
                 const data = await response.json();
                 if (data.success) {
                     alert('Etapa atualizada com sucesso!');
+                    window.location.href = 'produtos.html'; 
                 } else {
                     alert('Erro ao atualizar a etapa.');
                 }
